Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-87023

Unshaded Custom materials have error "Could not find sampler for light probe"

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 6.0.0 RC
    • 6.0.0 Alpha
    • Quick: 3D
    • None
    • 1
    • 6d8869801ce180678e1cc3e6f2d27f466a312dc2 (qt/qtquick3d/dev)

      When using Custom Materials in "Unshaded" mode in a scene with a lightProbe, every frame will print out error: Could not find sampler for light probe

      This doesn't make too much sense because "Unshaded" materials shouldn't even need to know anything about the state of any lightProbes in the scene.

        For Gerrit Dashboard: QTBUG-87023
        # Subject Branch Project Status CR V

            lagocs Laszlo Agocs
            janichol Andy Nichols
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes