Do not print warning for missing light probe sampler in custom material

We do not do this for any other textures/samplers either (ambient
occlusion, screen texture, etc.), no reason to do it for the light
probe: there are legitimate custom material cases when there is no light
probe sampler present, even if the scene has a light probe.

Fixes: QTBUG-87023
Change-Id: I818f4636bc3086aa778af3626f5fa66d23603fe1
Reviewed-by: Jonas Karlsson <jonas.karlsson@qt.io>
Reviewed-by: Christian Strømme <christian.stromme@qt.io>